<resources>
    <string name="app_name">Proiect_draft</string>
    <string name="profile">Profile</string>
    <string name="notifications">notifications</string>
    <string name="about">about</string>
    <string name="devabout">Welcome!
        "1082 D Alexandru Andra and Masala Alexandra" is a registered Romanian company with headquarter in Bucharest.
        \n\n
        One of our most popular product is our platform "Pagina personala pentru studenti".
        \n\n
        For more information click on the link:
        \n\n
    </string>
    <string name="link_to_the_website">
        <a href="https://google.com"> Read more here</a>
    </string>
    <string name="settings">Settings</string>
    <string name="others">others</string>
    <string name="Verified">Verified</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myJournal">myJournal</string>
    <string name="my_journal">My Journal</string>
    <string name="about_us">About Us</string>
    <string name="salvare_date">Save Note</string>
    <string name="courses">courses</string>
    <string name="taxes">taxes</string>
    <string name="calendar">calendar</string>
    <string name="choose_the_dark_side">Choose the Dark Side!</string>
    <string name="sillabus">Sillabus</string>
    <string name="syllabus">Syllabus</string>
    <string name="light_dark_mode">Light/ Dark Mode</string>
    <string name="select_the_language">Select the language</string>
    <string name="new_here_create_account">New here? Create Account!</string>
    <string name="language">Language</string>
    <string name="switchButton">switchButton</string>
    <string name="statistics">Statistics</string>
    <string name="rate_us">Rate Us</string>
    <string name="your_opinoin_help_us_improve_our_servicies_if_you_liked_our_app_please_rate_us">Your opinoin help us improve our servicies. If you liked our app please rate us!</string>
    <string name="introduceti_titlul">Introduceti titlul</string>
    <string name="introduceti_data_in_jurnal">Introduceti data in jurnal</string>
    <string name="scrieti_notita">Scrieti notita</string>
    <string name="tipul_notitei">Tipul notitei:</string>
    <string name="lecture">Lecture</string>
    <string name="lab">Lab</string>
    <string name="Others">Others</string>
    <string name="tipul_activitatii">Tipul activitatii:</string>
    <string name="rate_our_app">Rate our app</string>
    <string name="examens">examens</string>
    <string name="university_of_economic_studies">University of Economic Studies</string>
    <string name="log_out">Log Out</string>
    <string name="editOra">Introduceti ora la care incepe examenul</string>
    <string name="editdataSustinere">Introduceti data la care se sustine examenul</string>
    <string name="editNumarCredit">Introduceti numarul de credite</string>
    <string name="editNumeMaterie">Introduceti numele materiei</string>
    <string name="editdurataOre">Introduceti durata desfasurarii examenului</string>
    <string name="btnSaveExam">Save</string>

    <string-array name="add_journal_note">
        <item>Favorite</item>
        <item>Important</item>
        <item>Remind Me Later</item>
    </string-array>

</resources>