<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menuProfile"
    android:icon="@drawable/profile"
    android:title="@string/profile" />

    <item android:id="@+id/menuSyllabus"
        android:icon="@drawable/calendar"
        android:title="@string/syllabus"/>

    <item android:id="@+id/menuExamens"
        android:icon="@drawable/exam"
        android:title="@string/examens" />

    <item android:id="@+id/menuMyJournal"
        android:icon="@drawable/myjournal"
        android:title="@string/myJournal" />

    <item android:title="@string/others">

  <menu>

    <item android:id="@+id/menuSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings" />

    <item android:id="@+id/menuAbout"
        android:icon="@drawable/about"
        android:title="@string/about" />

  </menu>

</item>

</menu>