<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground"
    tools:context=".Add_Exam_Activity">


    <EditText
        android:id="@+id/editNumeMaterie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/editNumeMaterie"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editNumarCredite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/editNumarCredit"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumeMaterie"
        android:autofillHints="" />


    <EditText
        android:id="@+id/editdataSustinere"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/editdataSustinere"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumarCredite"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editOra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/editOra"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editdataSustinere"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editdurataOre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/editdurataOre"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOra"
        android:autofillHints="" />


    <Button
        android:id="@+id/btnSaveExam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnSaveExam"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.42"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editdurataOre"
        app:layout_constraintVertical_bias="0.456"
        tools:ignore="UnknownId" />

<!--    <TextView-->
<!--        android:id="@+id/tvTipExam"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/tvTipExam" />-->

<!--    <EditText-->
<!--        android:id="@+id/editTipExam"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        />-->


</androidx.constraintlayout.widget.ConstraintLayout>


