<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:tag="settingsTag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsFragment"
    tools:ignore="MissingClass">


    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="113dp"
        android:layout_height="49dp"
        android:layout_gravity="top"
        android:layout_marginStart="131dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="137dp"
        android:text="@string/settings"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvDarkSide"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDarkSide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/light_dark_mode"
        android:textColor="#F10000"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchMode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switchMode" />

    <Switch
        android:id="@+id/switchMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="23dp"
        android:text="@string/switchButton"
        android:textSize="18sp"
        android:checked="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <TextView-->
<!--        android:id="@+id/tvLanguage"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="44dp"-->
<!--        android:text="@string/select_the_language"-->
<!--        android:textColor="#F10000"-->
<!--        android:textSize="18sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/spinnerSelectLanguage"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.118"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvDarkSide"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

<!--    <Spinner-->
<!--        android:id="@+id/spinnerSelectLanguage"-->
<!--        android:layout_width="370dp"-->
<!--        android:layout_height="22dp"-->
<!--        android:text="@string/language"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.682"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView6"-->
<!--        app:layout_constraintVertical_bias="0.248" />-->

</androidx.constraintlayout.widget.ConstraintLayout>